Fix css to align center divs

--- a/front/css/cocktail.css
+++ b/front/css/cocktail.css
@@ -30,7 +30,6 @@ html {
 .onepage {
     color: #fff;
     bottom: 1% !important;
-    margin-top: -200px;
     width: 100%;
     position: initial !important;
     text-align:center;
